k8s/skaffold/destination-rule.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: drone-management-api
  namespace: default
spec:
  selector:
    matchLabels:
      app: drone-management-api
  mtls:
    mode: STRICT

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: default
  namespace: default
spec:
  host: drone-management-api.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
