k8s/skaffold/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: drone-management-api-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: drone-management-api
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - drone-management-api-gateway
  http:
    - match:
        - uri:
            prefix: /api/v1/drone
      route:
        - destination:
            host: drone-management-api
            port:
              number: 9000`
